add jvm&gc demos